--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who we are</title>
-    <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="about.css">
+    <link rel="icon" href="./logo.png">
+    <link rel="stylesheet" href="./about.css">
 
 </head>
 <body>
-        <a href="index.html"><img src="logo.png" style="width: 150px; height: 75px; " class="logo" alt="Bussin logo"></a>
+        <a href="./index.html"><img src="./logo.png" style="width: 150px; height: 75px; " class="logo" alt="Bussin logo"></a>
     
     <div class="grid-container">
         <div>
@@ -23,7 +23,7 @@
         
 
         <div>
-            <img src="image.jpg" alt="banner" class="image">
+            <img src="./image.jpg" alt="banner" class="image">
 
         </div>
 
