--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
         <div class="item1">
             <a href="https://forms.gle/kzASLyFocQYXy5Xo9" target="_main" class="link1"> <img src="homechef1.jpg" alt="Homechef image" class="image"></a>
-            <h2 class="name">Name</h2>
+            <h2 class="name">Vinayaka</h2>
             <a href="https://forms.gle/kzASLyFocQYXy5Xo9" target="_main"><input type="button" value="Order now" class="button"></a>
 
         </div>
