--- a/addhomechef.html
+++ b/addhomechef.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Homechef</title>
-    <link rel="stylesheet" href="addhomechef.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="./addhomechef.css">
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
     <div class="header">
-        <a href="index.html"><img src="logo.png" style="width: 150px; height: 75px; " class="logo" alt="Bussin logo"></a>
+        <a href="./index.html"><img src="./logo.png" style="width: 150px; height: 75px; " class="logo" alt="Bussin logo"></a>
         <!-- <a href="signup.html" class="links" id="signup">Sign up</a> -->
         <!-- <a href="login.html" class="links">Login</a> -->
         <h1 class="headline">Partner with Bussin and increase your customers</h1>
@@ -52,19 +52,19 @@ Homechefs are also not overshadowed by top restaurants.</pre>
     
     <div class="grid-container2">
         <div class="info1">
-            <img src="signup.png" alt="signup icon" class="img">
+            <img src="./signup.png" alt="signup icon" class="img">
             <h2>1. Sign up with your details</h2>
            
         </div>
 
 
         <div class="info2">
-            <img src="register.jpg" alt="register icon" class="img" id="img2">
+            <img src="./register.jpg" alt="register icon" class="img" id="img2">
             <h2>2. Register your kitchen and fill in the required information</h2>
         </div>
 
         <div class="info3">
-            <img src="order.jpg" alt="order icon" class="img">
+            <img src="./order.jpg" alt="order icon" class="img">
             <h2>3. Start catering to orders</h2>
         </div>
     </div>
