--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
-    <link rel="stylesheet" href="contact.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="./contact.css">
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
     <div>
-        <a href="index.html"><img src="logo.png" alt="logo" class="logo"></a>
+        <a href="./index.html"><img src="./logo.png" alt="logo" class="logo"></a>
     </div>
     <div class="header">
         <h1 id="line"><b></b>We would love to hear from you!</b></h1>
