--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title style="font-family:'Times New Roman', Times, serif">Bussin</title>
-    <link rel="icon" href="">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <div class="grid-container">
             <div class="item1">
-                <a href="index.html"><img src="logo.png" class="logo" alt="Bussin logo"></a>
+                <a href="./index.html"><img src="./logo.png" class="logo" alt="Bussin logo"></a>
 
                 <!-- <a href="signup.html" class="links" id="signup">Sign up</a>
                 <a href="login.html" class="links">Login</a> -->
                 <!-- <a href="addhomechef.html" class="links" id="add">Add a homechef</a> -->
-                <a href="addhomechef.html"><input type="button" value="Add homechef" class="links" id="add"></a>
+                <a href="./addhomechef.html"><input type="button" value="Add homechef" class="links" id="add"></a>
                 <h1 class="heading1">Craving for food that makes you feel at home?</h1>
                 <h2 class="heading2" style="color:crimson"><i>Order home-made meals prepared by homechefs around you</i></h2>
                 <div>
@@ -30,7 +29,7 @@
             </div>
             
             <div class="item2">
-                <img src="banner.jpg" alt="Banner" class="banner">
+                <img src="./banner.jpg" alt="Banner" class="banner">
                 
 
 
