--- a/feedback.html
+++ b/feedback.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
-    <link rel="stylesheet" href="feedback.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="./feedback.css">
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
     <div class="feedback">
