--- a/about.html
+++ b/about.html
@@ -14,9 +14,13 @@
     <div class="grid-container">
         <div>
             <h1 class="about">About us</h1>
-            <p class="content">Hi, I'm Nita Achari, founder and CEO of Bussin. At Bussin, we believe that everyone deserves food that makes one feel at home. Having unhealthy restaurant food regularly is shown to have adverse health effects. That's where we come. We deliver freshly-prepared, preservative-free, hygenic home-made meals at your doorstep. Bussin provides a plaform for homechefs to show their culinary skills and turn their kitchens into successful businesses. We believe that Bussin can allow many women to be financially independent by running a food business from their homes. It's a great platform for anyone who is passionate about cooking! We are an intersection of consumers, homechefs and delivery partner striving to make a healthier world.<br>
+            <p class="content">At Bussin, we believe that everyone deserves food that makes one feel at home. Having unhealthy restaurant food regularly is shown to have adverse health effects. That's where we come. We deliver freshly-prepared, preservative-free, hygenic home-made meals at your doorstep. Bussin provides a plaform for homechefs to show their culinary skills and turn their kitchens into successful businesses. We believe that Bussin can allow many women to be financially independent by running a food business from their homes. It's a great platform for anyone who is passionate about cooking! We are an intersection of consumers, homechefs and delivery partner striving to make a healthier world.<br>
             <i>P.S. The idea behind Bussin was given to me by my parents and the name Bussin is a Gen Z slang for yummy food!</i>
             </p>
+            <h3>Our Team</h3>
+            <br>
+            <p>Nita Achari - Founder and CEO</p>
+            <p>Sejal Mandwe - Operations Officer</p>
             
 
         </div>
