--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
             <i>P.S. The idea behind Bussin was given to me by my parents and the name Bussin is a Gen Z slang for yummy food!</i>
             </p>
             <h3 class="teamcontent">Our Team</h3>
-            <p class="teamcontent">Nita Achari - Founder and CEO</p>
-            <p class="teamcontent">Sejal Mandwe - Operations Officer</p>
+            <h4 class="teamcontent">Nita Achari - Founder and CEO</h4>
+            <h4 class="teamcontent">Sejal Mandwe - Operations Officer</h4>
             
 
         </div>
