--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             </p>
             <h2 class="teamcontent">Our Team</h2>
             <h3 class="teamcontent">Nita Achari - Founder and CEO</h3>
-            <h3 class="teamcontent">Sejal Mandwe - Operations Officer</h3>
+            <h3 class="teamcontent">Sejal Mandwe -COO</h3>
             
 
         </div>
