--- a/menu.html
+++ b/menu.html
@@ -18,9 +18,9 @@
 
         </div>
         <div class="item2">
-            <a href="https://forms.gle/JMkiaWS2UVdtBA259" target="_main" class="link2"><img src="./caterer2.jpg" alt="Homechef image" class=image></a>
+            <a href="https://forms.gle/pdegtWnUWCJLPCcb8" target="_main" class="link2"><img src="./caterer2.jpg" alt="Homechef image" class=image></a>
             <h2 class="name">Sadashiva Kitchens</h2>
-            <a href="https://forms.gle/kzASLyFocQYXy5Xo9" target="_main"><input type="button" value="Order now" class="button"></a>
+            <a href="https://forms.gle/MzxLDF3xzf1ghMpk8" target="_main"><input type="button" value="Order now" class="button"></a>
             
         </div>
         
