--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
             <p class="content">At Bussin, we believe that everyone deserves food that makes one feel at home. Having unhealthy restaurant food regularly is shown to have adverse health effects. That's where we come. We deliver freshly-prepared, preservative-free, hygenic home-made meals at your doorstep. Bussin provides a plaform for homechefs to show their culinary skills and turn their kitchens into successful businesses. We believe that Bussin can allow many women to be financially independent by running a food business from their homes. It's a great platform for anyone who is passionate about cooking! We are an intersection of consumers, homechefs and delivery partner striving to make a healthier world.<br>
             <i>P.S. The idea behind Bussin was given to me by my parents and the name Bussin is a Gen Z slang for yummy food!</i>
             </p>
-            <h2 class="teamcontent">Our Team</h2>
+            <!-- <h2 class="teamcontent">Our Team</h2> -->
             <h3 class="teamcontent">Nita Achari - Founder and CEO</h3>
-            <h3 class="teamcontent">Sejal Mandwe -COO</h3>
+            <!-- <h3 class="teamcontent">Sejal Mandwe -COO</h3> -->
             
 
         </div>
