--- a/menu.html
+++ b/menu.html
@@ -12,9 +12,9 @@
     
     <div class="grid-container">
         <div class="item1">
-            <a href="https://forms.gle/pdegtWnUWCJLPCcb8" target="_main" class="link1"> <img src="homechef1.jpg" alt="Homechef image" class="image"></a>
+            <a href="https://forms.fillout.com/t/ohM56nLzMous" target="_main" class="link1"> <img src="homechef1.jpg" alt="Homechef image" class="image"></a>
             <h2 class="name">Sadashiva Kitchens</h2>
-            <a href="https://forms.gle/pdegtWnUWCJLPCcb8" target="_main"><input type="button" value="Order now" class="button"></a>
+            <a href="https://forms.fillout.com/t/ohM56nLzMous" target="_main"><input type="button" value="Order now" class="button"></a>
 
         </div>
 <!--         <div class="item2">
