--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
             <h2 class="teamcontent">Our Team</h2>
             <h3 class="teamcontent">Nita Achari - Founder and CEO</h3>
             <h3 class="teamcontent">Sejal Mandwe -Operations</h3>
+             <h3 class="teamcontent">Daivik Nagaraj- Marketing</h3>
+            <h3 class="teamcontent">Vedant Nair -Tech</h3>
             
 
         </div>
